fix for responsive menu collapse

--- a/packages/cpt-ui/assets/styles/header.scss
+++ b/packages/cpt-ui/assets/styles/header.scss
@@ -1,61 +1,88 @@
-// HEADER --------------------------------------------------------------- //
-.masthead {
-  border-bottom: 1px solid #93b9dd;
-  padding-left: 32px;
-  padding-right: 32px;
-
-  &-container {
-    margin: 0;
-    align-items: center;
-    justify-content: space-between;
+.nhsuk-width-container.nhsuk-header__container.masthead-container {
+  min-width:100%;  
+  padding-left:24px;
+}
+.nhsuk-navigation-container{
+  position: relative;
+  top: -65px;
+  width: calc(100% - 337px);
+  .nhsuk-header__navigation-list {
+    display:flex;
+    right: -353px;
+  position: absolute;
+  left: unset;
+  justify-content:flex-end;
+  margin:0 16px 0 16px;
   }
-
-  &-service {
-    flex-grow: 1;
-  }
-
-  .nhsuk-header {
-    &__navigation-list {
-      margin:0;
-      border-top:1px solid rgba(255,255,255,.2)
-    }
-  &__menu {
-    position: unset;
-    margin: 0;
-    float: none;
-    justify-self: flex-end;
-
-    &-toggle {
-      right: 0;
-    }
+  .nhsuk-header__drop-down {
+    top:65px;
+    background-color: #ffffff;
+    border-bottom: 4px solid #f0f4f5;
+    overflow: hidden;
+    position: absolute;
+    right: 0;
+    left: auto;
+    width: 100vw;
   }
 }
 
-}
-@media screen and (min-width: 990px) {
-  .masthead {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-
-    &-container {
-      max-width: 960px;
-      flex-grow: 1;
+@media (min-width: 48.0625em) {
+  .nhsuk-header__container {
       margin: 0;
-      display:flex;
-    }
-
-    &-nav {
-      flex-grow: 0;
-      margin: 0;
-    }
-  .nhsuk-header {
-    &__navigation-list {
-      align-items: flex-end;
-      border-top: 0;
-      margin:0;
-    }
-}
   }
+}
 
+@media (max-width: 990px) {
+  .nhsuk-header__container {
+      margin: 0;
+  }
+}
+
+.nhsuk-width-container.nhsuk-header__container.masthead-container {
+  width:460px;  
+  padding-left:24px;
+  max-width:100%;
+}
+.nhsuk-navigation-container{
+  position: relative;
+  top: -63px;
+  width: calc(100% - 440px);
+  right: -102px;
+}
+
+@media (max-width: 640px) {
+  .nhsuk-width-container.nhsuk-header__container.masthead-container {
+    padding-left:10px;
+  }
+  .nhsuk-navigation { 
+    min-width:100%;
+    max-width:100%;
+    width:100vw;
+  }
+  .nhsuk-header {
+    padding-bottom:68px;
+  }
+  .nhsuk-navigation-container .nhsuk-header__navigation-list {
+right: unset;
+width: 100vw;
+justify-content: flex-start;
+left: -118px;
+top: 64px;
+padding-left: 16px;
+}
+.nhsuk-navigation-container .nhsuk-header__navigation-list {
+  right: unset;
+  width: 100%;
+  justify-content: flex-start;
+  left: 0;
+  top: 64px;
+  padding-left: 0;
+  min-width:100vw;
+  margin-left:0;
+}
+
+.nhsuk-width-container.nhsuk-header__container.masthead-container, .nhsuk-navigation-container {  
+  min-width:100vw;
+  right:unset;
+}
 }
